# StoryApp_Fastapi

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/core/: config.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py
backend/schemas/: job.py  story.py
frontend/src/components/: StoryGenerator.jsx
